# trakr

./: README.md  pyproject.toml
trakr/: alembic.ini  db.py
trakr/migrations/: env.py
trakr/migrations/versions/: 46b9811ee60a_initial_models.py
trakr/models/: __init__.py  assocs.py  base.py  clients.py  projects.py  tags.py  time_entry.py  users.py
