[tool.poetry]
name = "trakr"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
alembic = "^1.16.1"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.11.5"}
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
